--- a/imdb_sentiment_analysis_tfidf.ipynb
+++ b/imdb_sentiment_analysis_tfidf.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "4  I recently bought the DVD, forgetting just how...          0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,88 +98,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(50000, 2)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "切分資料集 train, val, test，其中train:test=7:3, 再從train set 中分出validate set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1989     Ramin Bahrani sets up a scene early on in Chop...\n",
-      "3854     As many have detailed here with a level of ser...\n",
-      "26879    Dr. Franz Tobel, a Swiss scientist, is smuggle...\n",
-      "26500    I have lost count of how many reviews I've wri...\n",
-      "44783    Oh how I laughed....this has it all...an Asian...\n",
-      "Name: review, dtype: object\n",
-      "49821    After Watergate, Vietnam and the dark days of ...\n",
-      "999      This begins a wager between Edgar Allen Poe an...\n",
-      "15211    Having seen CUBE, I've been a fan of Vincenzo ...\n",
-      "30483    First off, let it be known that I came into th...\n",
-      "37317    From the critical acclaim, I expected more fro...\n",
-      "Name: review, dtype: object\n",
-      "1989     1\n",
-      "3854     0\n",
-      "26879    1\n",
-      "26500    1\n",
-      "44783    0\n",
-      "Name: sentiment, dtype: int64\n",
-      "49821    0\n",
-      "999      1\n",
-      "15211    1\n",
-      "30483    1\n",
-      "37317    0\n",
+      "(50000, 2)\n",
+      "1    25000\n",
+      "0    25000\n",
       "Name: sentiment, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "print(df.shape)\n",
+    "print(df['sentiment'].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pre-processing\n",
+    "1. to lowercase\n",
+    "2. remove url and html tag\n",
+    "3. remove puctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>in 1974, the teenager martha moxley (maggie gr...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ok... so... i really like kris kristofferson a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>***spoiler*** do not read this, if you think a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hi for all the people who have seen this wonde...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>i recently bought the dvd, forgetting just how...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review  sentiment\n",
+       "0  in 1974, the teenager martha moxley (maggie gr...          1\n",
+       "1  ok... so... i really like kris kristofferson a...          0\n",
+       "2  ***spoiler*** do not read this, if you think a...          0\n",
+       "3  hi for all the people who have seen this wonde...          1\n",
+       "4  i recently bought the dvd, forgetting just how...          0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import re\n",
+    "import nltk\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(df['review'], df['sentiment'], train_size=0.7, test_size=0.3)\n",
-    "x_train, x_val, y_train, y_val = train_test_split(x_train, y_train, train_size=0.7, test_size=0.3)\n",
-    "print(x_train.head(5))\n",
-    "print(x_test.head(5))\n",
-    "print(y_train.head(5))\n",
-    "print(y_test.head(5))\n",
+    "# to lowercase\n",
+    "df['review'] = df['review'].str.lower()\n",
     "\n",
-    "dict = {'review':x_test, 'sentiment':y_test}\n",
-    "df = pd.DataFrame(dict)\n",
-    "df.to_csv('imdb_test.csv', header=True, index=False)\n",
+    "# remove url and html tag\n",
+    "df['review'] = df['review'].apply(lambda x: BeautifulSoup(x).get_text())\n",
+    "df['review'] = df['review'].apply(lambda x: re.sub(r\"http\\S+\", \"\", x))\n",
     "\n",
-    "dict = {'review':x_val, 'sentiment':y_val}\n",
-    "df = pd.DataFrame(dict)\n",
-    "df.to_csv('imdb_val.csv', header=True, index=False)\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>in  the teenager martha moxley maggie grace mo...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ok so i really like kris kristofferson and his...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spoiler do not read this if you think about wa...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hi for all the people who have seen this wonde...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>i recently bought the dvd forgetting just how ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>leave it to braik to put on a good show finall...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>nathan detroit frank sinatra is the manager of...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>to understand crash course in the right contex...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ive been impressed with chavezs stance against...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>this movie is directed by renny harlin the fin...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review  sentiment\n",
+       "0  in  the teenager martha moxley maggie grace mo...          1\n",
+       "1  ok so i really like kris kristofferson and his...          0\n",
+       "2  spoiler do not read this if you think about wa...          0\n",
+       "3  hi for all the people who have seen this wonde...          1\n",
+       "4  i recently bought the dvd forgetting just how ...          0\n",
+       "5  leave it to braik to put on a good show finall...          1\n",
+       "6  nathan detroit frank sinatra is the manager of...          1\n",
+       "7  to understand crash course in the right contex...          1\n",
+       "8  ive been impressed with chavezs stance against...          1\n",
+       "9  this movie is directed by renny harlin the fin...          1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove puctuation\n",
+    "df['review'] = df['review'].apply(lambda x: \" \".join([re.sub('[^A-Za-z]+', '', x) for x in str(x).split()]))\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "切分資料集 train, val, test，其中train:test=7:3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.model_selection import train_test_split\n",
     "\n",
-    "dict = {'review':x_train, 'sentiment':y_train}\n",
-    "df = pd.DataFrame(dict)\n",
-    "df.to_csv('imdb_train.csv', header=True, index=False)"
+    "# x_train, x_test, y_train, y_test = train_test_split(df['review'], df['sentiment'], train_size=0.7, test_size=0.3)\n",
+    "# # x_train, x_val, y_train, y_val = train_test_split(x_train, y_train, train_size=0.7, test_size=0.3)\n",
+    "# print(x_train.head(5))\n",
+    "# print(x_test.head(5))\n",
+    "# print(y_train.head(5))\n",
+    "# print(y_test.head(5))\n",
+    "\n",
+    "# dict = {'review':x_test, 'sentiment':y_test}\n",
+    "# df = pd.DataFrame(dict)\n",
+    "# df.to_csv('imdb_test.csv', header=True, index=False)\n",
+    "\n",
+    "# # dict = {'review':x_val, 'sentiment':y_val}\n",
+    "# # df = pd.DataFrame(dict)\n",
+    "# # df.to_csv('imdb_val.csv', header=True, index=False)\n",
+    "\n",
+    "# dict = {'review':x_train, 'sentiment':y_train}\n",
+    "# df = pd.DataFrame(dict)\n",
+    "# df.to_csv('imdb_train.csv', header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15000, 2)\n",
+      "0    7508\n",
+      "1    7492\n",
+      "Name: sentiment, dtype: int64\n",
+      "(35000, 2)\n",
+      "1    17508\n",
+      "0    17492\n",
+      "Name: sentiment, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = pd.read_csv('imdb_test.csv', encoding='utf-8')\n",
+    "print(test.shape)\n",
+    "print(test['sentiment'].value_counts())\n",
+    "\n",
+    "train = pd.read_csv('imdb_train.csv', encoding='utf-8')\n",
+    "print(train.shape)\n",
+    "print(train['sentiment'].value_counts())\n",
+    "\n",
+    "# val = pd.read_csv('imdb_val.csv', encoding='utf-8')\n",
+    "# print(val.shape)\n",
+    "# print(val['sentiment'].value_counts())"
    ]
   },
   {
@@ -191,22 +404,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "tfidf_vec = TfidfVectorizer()\n",
+    "train_review = tfidf_vec.fit_transform(train['review'])\n",
+    "# val_review = tfidf_vec.fit_transform(val['review'])\n",
+    "test_review = tfidf_vec.transform(test['review'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用 word2vec當作評論特徵"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fit modle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'python' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-4c1899a86226>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpython\u001b[0m \u001b[1;33m-\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'python' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35000, 171611)\n",
+      "logistic regressiong acc:  0.8896\n",
+      "svm acc:  0.8959333333333334\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# logistic regression train?\n",
+    "clf = LogisticRegression(solver='saga', max_iter=500)\n",
+    "print(train_review.shape)\n",
+    "clf.fit(train_review, train['sentiment'])\n",
+    "predict = clf.predict(test_review)\n",
+    "print('logistic regressiong acc: ', accuracy_score(test['sentiment'], predict))\n",
+    "\n",
+    "# svm\n",
+    "svm = LinearSVC(random_state=0)\n",
+    "svm.fit(train_review, train['sentiment'])\n",
+    "predict = svm.predict(test_review)\n",
+    "print('svm acc: ', accuracy_score(test['sentiment'], predict))"
+   ]
   }
  ],
  "metadata": {
