--- a/imdb_sentiment_analysis_tfidf.ipynb
+++ b/imdb_sentiment_analysis_tfidf.ipynb
@@ -434,12 +434,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "fit modle"
+    "logistic regression with sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
      "output_type": "stream",
      "text": [
       "(35000, 171611)\n",
-      "logistic regressiong acc:  0.8896\n",
+      "logistic regressiong acc:  0.8895333333333333\n",
       "svm acc:  0.8959333333333334\n"
      ]
     }
@@ -473,11 +473,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "2647ea34e536f865ab67ff9ddee7fd78773d956cec0cab53c79b32cd10da5d83"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -491,7 +488,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5a9e08d3d7ccfa255d62ba1e587172a6adb964258b9aeb02178b449ad672450b"
+   }
   }
  },
  "nbformat": 4,
